Kleopatra has two options to disable CRL checks with slightly different wording. This would not be so bad if the options were in sync, but after changing the setting on one page the other page shows the old value until the config dialog is reloaded.
Description
Description
Details
Details
- Version
- 3.1.7
Revisions and Commits
Revisions and Commits
rKLEOPATRA Kleopatra | |||
rKLEOPATRAdd7c15cfc591 Remove surplus "Validate certificates using CRLs" option |
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | • ikloecker | T4524 Kleopatra: CRL check configuration available multiple times and out of sync | ||
Invalid | • aheinecke | T4523 Gpg4win: Multiple problems reported 05-2019 |
Event Timeline
Comment Actions
Ingo, as you are currently working on the config dialog, maybe you could also fix this issue on the way.
This is about the S/MIME validation config page. There is this weird Radio button that is not really a Radio button "Validate certificates using CRLs", I would like you to remove that entry and just keep the "Never consult a CRL" setting to disable CRL checks. And make the "Validate certificates online (OCSP)" just a checkbox. It is possible to enable both OCSP and CRL checks so they shouldn't look like a Radio group.