Remove surplus "Validate certificates using CRLs" option

This option duplicated the "Never consult a CRL" option and was ignored.

GnuPG-bug-id: 4524